--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "os": "^0.1.2"
   }
 }
